2005-05-27  Yves Combe  <yves@ycombe.net>

	* -l list feature
	PROFIL STUFF (depends on --enable-profils, work in progress)
	* add -e in gcompris.c, gameutil.c
	* add profile.h (profile.c missing again)
	* add profiles in properties.{c,h} and in gcompris.c
	* fix configure.in and src/gcompris/Makefile.am to compile profiles correctly.
	
2005-05-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/maze2DRelative.xml.in: improved help message
	* configure.in: improved by Yves to provide python detection on newer version
	added detection for cairo and sqllite but it's not used anywhere yet
	* acinclude.m4: created by Yves, contain python checkings code.

2005-05-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed by yves, on newer pygtk (2.6), gtk.True is deprecated
	and must be replaced by True. This solves the key double entry.
	In anim, fixed a bug when a photo was taken with right click on an anchor
	In anim, fixed the search for external (full path images)
	Question: Yves could we put external images relatives to the user home dir.
	This way we could exchange animation is the user copy her personal image dir.
	
	* src/boards/python/anim.py:
	* src/boards/python/bargame.py:
	* src/boards/python/gnumch.py:
	* src/boards/python/melody.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/redraw.py:
	* src/boards/python/searace.py:
	* src/boards/python/watercycle.py:

2005-05-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated the screenshots web site.
	
	* boards/gnumch-equality.xml.in:
	* boards/gnumch-factors.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/gnumch-multiples.xml.in:
	* boards/gnumch-primes.xml.in:
	* boards/searace1player.xml.in:
	* docs/gcompris2spip.pl:
	* docs/screenshots/advanced_colors_small.jpg:
	* docs/screenshots/algebra_by_small.jpg:
	* docs/screenshots/algebra_guesscount_small.jpg:
	* docs/screenshots/algebra_minus_small.jpg:
	* docs/screenshots/algebra_plus_small.jpg:
	* docs/screenshots/algorithm_small.jpg: