@@ -1,3 +1,8 @@
+2005-05-30  Yves Combe <yves@ycombe.net>
+
+	* src/gcompris/gcompris.c src/gcompris/properties.c src/gcompris/properties.h: 
+	command line parameters for profils database
+
 2005-05-27  Yves Combe  <yves@ycombe.net>
 
 	* -l list feature
